--- a/src/index.css
+++ b/src/index.css
@@ -3,11 +3,104 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  background-image: url('./layered-waves-haikei(5).svg');
+  background-repeat: no-repeat;
+  width: 80%;
+  margin-left:auto;
+  margin-right:auto;
+  background-size: auto 103em ;
+  color: azure;
+  background-color: #202731;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+li, a, button {
+  text-decoration: none;
+}
+
+.nav-bar {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 100px;
+  margin: 0 40px;
+}
+
+.nav-bar ul{
+  list-style-type: none;
+  display: flex;
+  padding: 0;
+  margin: 0;
+}
+
+.nav-bar a {
+  margin: 10px;
+  padding: 3px;
+  color: azure;
+}
+
+.nav-bar a:link {
+  color: azure;
+}
+
+.section-first {
+  height: 400px;
+  width: 80%;
+  margin-left: auto;
+  margin-right: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.section-first h2 {
+  font-size: 68px;
+}
+
+.section-second {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.container {
+  min-height: 1000px;
+  display: grid;
+  align-items: center;
+  justify-content: center;
+  grid-template-columns: repeat(2, 1fr);
+  column-gap: 20px;
+  row-gap: 20px;
+  grid-auto-flow: row ;
+}
+
+@media (max-width: 900px) {
+  .container {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+
+.project-card {
+  width: 700px;
+  height: auto;
+  padding: 10px;
+  border-radius: 10px;
+  margin: 1rem;
+  color: black;
+  backdrop-filter: blur(8px); /* Chrome and Opera */
+  box-shadow: 0px 10px 15px 10px rgb(0 0 0 / 15%);
+  background-color: rgb(255 255 255 / 90%); 
+}
+
+.project-card:hover {
+  cursor: pointer;
+}
+
+.project-card img {
+  width: 100%;
+}
+
+.title {
+  font-size: 68px;
 }
